# she_gtestx

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
cmake/: she_gtestxConfig.cmake.in
examples/: CMakeLists.txt  basic_example.cpp
include/she_gtestx/: she_gtestx.h
tests/: CMakeLists.txt  she_gtestx_test.cpp
